@@ -5,6 +5,7 @@ mpdscribble 0.18 - not yet released
   * removed the command line options --cache, --cache-interval, --sleep
   * support multiple scrobbler services (such as libre.fm)
   * schedule "now playing" after successful handshake
+  * default to syslog
 
 
 mpdscribble 0.17 - 2009-03-02
